--- a/index.html
+++ b/index.html
@@ -137,14 +137,14 @@
     <!-- Top header full-width white line, land image, another line -->
     <div class="top-header">
     <div class="top-header-line"></div>
-    <img src="images/kalima-text.png" alt="Bangladesh Land Shape">
+    <img src="kalima-text.png" alt="Bangladesh Land Shape">
     <div class="top-header-line"></div>
     </div>
 
 
     <!-- Logo below the land image -->
     <div class="logo-wrap">
-        <img src="images/bncf-logo.png" height="170" class="logo">
+        <img src="bncf-logo.png" height="170" class="logo">
     </div>
 
     <h1 class="glitch">HACKED BY BANGLADESH NATIONAL CYBER FORCE</h1>
@@ -157,7 +157,7 @@
     </p>
 
     <!-- Added Image Below Text -->
-    <img src="images/hacked.png" width="280" style="margin-top:15px; border:2px solid #00ffaa;">
+    <img src="hacked.png" width="280" style="margin-top:15px; border:2px solid #00ffaa;">
 
     <div class="tag-section">
         <a href="#">#CyberSecurity</a>
@@ -179,3 +179,4 @@
 
 </body>
 </html>
+
