--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@
 
     <div class="top-header">
         <div class="top-header-line"></div>
-        <img src="images/kalima-text.png" alt="Bangladesh Land Shape">
+        <img src="kalima-text.png" alt="Bangladesh Land Shape">
         <div class="top-header-line"></div>
     </div>
 
     <div class="logo-wrap">
-        <img src="images/bncf-logo.png" height="130" class="logo">
+        <img src="bncf-logo.png" height="130" class="logo">
     </div>
 
     <h1 class="glitch">HACKED BY BANGLADESH NATIONAL CYBER FORCE</h1>
@@ -142,13 +142,13 @@
         Digital security is our responsibility. Always follow ethical cybersecurity rules.
     </p>
 
-    <img src="images/hacked.png" width="280" style="margin-top:15px; border:2px solid #00ffaa;">
+    <img src="hacked.png" width="280" style="margin-top:15px; border:2px solid #00ffaa;">
 
     <div class="tag-section">
-        <a href="#">#CyberSecurity</a>
-        <a href="#">#SecureBangladesh</a>
-        <a href="#">#EthicalHacking</a>
-        <a href="#">#DigitalSafety</a>
+        <a href="#">#Hacked_by_BNCF</a>
+        <a href="#">#We_are_Stand_Bangladesh</a>
+        <a href="#">#Fucking_System</a>
+        <a href="#">#Bangladesh_National_Cyber_Force</a>
     </div>
 
     <div class="footer">
@@ -165,3 +165,4 @@
 
 </body>
 </html>
+
