--- a/index.html
+++ b/index.html
@@ -106,6 +106,13 @@
         box-shadow: 0 0 20px #00ff00, 0 0 45px #00ff00, 0 0 90px #00ff00;
     }
 
+    .logo-wrap img {
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        object-fit: cover;
+    }
+
     @keyframes bdGlow {
         0% { background: #006a4e; box-shadow: 0 0 25px #00ff00, 0 0 60px #00ff00, 0 0 120px #00ff00; }
         50% { background: #006a4e; box-shadow: 0 0 25px #ff0000, 0 0 60px #ff0000, 0 0 120px #ff0000; }
@@ -130,7 +137,7 @@
     </div>
 
     <div class="logo-wrap">
-        <img src="bncf-logo.png" height="130" class="logo">
+        <img src="bncf-logo.png" class="logo">
     </div>
 
     <h1 class="glitch">HACKED BY BANGLADESH NATIONAL CYBER FORCE</h1>
@@ -145,10 +152,10 @@
     <img src="hacked.png" width="280" style="margin-top:15px; border:2px solid #00ffaa;">
 
     <div class="tag-section">
-        <a href="#">#Hacked_by_BNCF</a>
-        <a href="#">#We_are_Stand_Bangladesh</a>
-        <a href="#">#Fucking_System</a>
-        <a href="#">#Bangladesh_National_Cyber_Force</a>
+        <a href="#">#HackedByBNCF</a>
+        <a href="#">#wBangladeshOurProud</a>
+        <a href="#">#CyberWar</a>
+        <a href="#">#BangladeshNatinalCyberForce</a>
     </div>
 
     <div class="footer">
@@ -165,4 +172,3 @@
 
 </body>
 </html>
-
