--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <div class="warning">Hacking Reason</div>
 
     <p class="content-text">
-        The reason for hacking our site is border killing. If BSF does not stop this board killing, 
+        The reason for hacking our site is border killing. If BSF does not stop this border killing, 
         then next time there will be cyber attacks on government websites of India.
     </p>
 
@@ -153,9 +153,9 @@
 
     <div class="tag-section">
         <a href="#">#HackedByBNCF</a>
-        <a href="#">#wBangladeshOurProud</a>
+        <a href="#">#BangladeshOurProud</a>
         <a href="#">#CyberWar</a>
-        <a href="#">#BangladeshNatinalCyberForce</a>
+        <a href="https://www.facebook.com/BangladeshNationalCyberForce">#BangladeshNatinalCyberForce</a>
     </div>
 
     <div class="footer">
@@ -181,6 +181,7 @@ document.addEventListener('click', () => {
 
 </body>
 </html>
+
 
 
 
