--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <div class="warning">Hacking Reason</div>
 
     <p class="content-text">
-        The reason for hacking our site is border killing. If BSF does not stop this border killing, 
+        The reason for hacking this site is border killing. If BSF does not stop this border killing, 
         then next time there will be cyber attacks on government websites of India.
     </p>
 
@@ -181,6 +181,7 @@ document.addEventListener('click', () => {
 
 </body>
 </html>
+
 
 
 
